# TetrisSFML

./: .gitignore  CMakeLists.txt  Makefile  README.md  main-old-2.cpp  main-old.cpp  main.cpp  tetris.md
include/: Board.h  Constants.h  Game.h  Piece.h  SoundManager.h
src/: Board.cpp  Game.cpp  Piece.cpp  SoundManager.cpp
